# crypto-framework

./: .gitignore  CMakeLists.txt
crypto/: CMakeLists.txt
crypto/include/random/: random_source.h  sys_random.h
crypto/random/: random_source.c  sys_random.c
crypto/wrp/: wrp_ciph.c  wrp_digest.c  wrp_key.c  wrp_pciph.c
crypto/wrpio/: CMakeLists.txt  wrpio.c  wrpio_file.c  wrpio_std.c
include/: cryptoconf.h  err.h  typedef.h  wrp.h  wrp_items.h  wrpio.h
include/internal/: wrp_int.h  wrpio_int.h
include/random/: random_source.h
